# chess-ai

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  main.cpp  my_play.sh
ai/: Action.cpp  Action.h  AiHelper.cpp  AiHelper.h  AiPlayer.cpp  AiPlayer.h  HeuristicValue.cpp  HeuristicValue.h  HistoryTable.cpp  HistoryTable.h  Node.cpp  Node.h  Pondering.cpp  Pondering.h  Settings.cpp  Settings.h  State.cpp  State.h  TerminalException.cpp  TerminalException.h  Timer.cpp  Timer.h
board/: BitBoard.cpp  BitBoard.h  Board.cpp  Board.h
io/: Debug.cpp  Debug.h  Error.cpp  Error.h  Parser.cpp  Parser.h  Translate.cpp  Translate.h
pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src-cpp/: CMakeLists.txt  main.cpp
src-cpp/ai/: Action.cpp  Action.h  AiHelper.cpp  AiHelper.h  AiPlayer.cpp  AiPlayer.h  ChessAI.cpp  ChessAI.h  Node.cpp  Node.h  Pondering.cpp  Settings.cpp  Settings.h  State.h  TerminalException.h  Timer.cpp  Timer.h
src-cpp/board/: BitBoard.cpp  BitBoard.h  Board.cpp
src-cpp/io/: Debug.cpp  Debug.h  Error.cpp  Error.h  Parser.h  Translate.cpp
src-cpp/pieces/: Bishop.cpp  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp
src-cpp/test/: CMakeLists.txt  additional_files.txt  main.cpp
src-cpp/test/tests/: BitBoardTester.cpp  BitBoardTester.h  BoardTester.cpp  BoardTester.h  TranslateTester.cpp
test/: BitBoardTester.cpp  BitBoardTester.h  BoardTester.cpp  BoardTester.h  ParserTester.cpp  ParserTester.h  TranslateTester.cpp  TranslateTester.h  main.cpp
